--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "jet",
-  "version": "2.0.0",
-  "description": "It's (j)ust (e)leventy and (t)ailwind … OK, and a few other things; it's still *really* small though.",
+  "name": "programming-protips",
+  "version": "0.0.0-not-distributed",
+  "description": "A collection of programming protips",
   "scripts": {
     "build:css": "postcss src/css/tailwind.css > src/css/styles.css",
-    "clean": "rm -rf public src/css/styles.css",
-    "dev": "rm -rf public && eleventy --serve",
-    "build": "npm run clean && NODE_ENV=production postcss src/css/tailwind.css > src/css/styles.css && eleventy"
+    "dev": "eleventy --serve",
+    "build": "NODE_ENV=production yarn build:css && eleventy"
   },
   "repository": {
     "type": "git",
@@ -19,12 +18,6 @@
     "tailwindcss",
     "purgecss"
   ],
-  "author": "marc amos",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/marcamos/jet/issues"
-  },
-  "homepage": "https://github.com/marcamos/jet#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "autoprefixer": "^10.2.1",
