--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:css": "postcss src/css/tailwind.css > src/css/styles.css",
     "dev": "eleventy --serve",
-    "build": "NODE_ENV=production yarn build:css && eleventy"
+    "build": "eleventy && NODE_ENV=production yarn build:css"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^0.11.1",
     "autoprefixer": "^10.2.1",
     "cssnano": "^4.1.10",
+    "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.2"
