--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "yarn build:css && eleventy --serve",
     "build": "NODE_ENV=production yarn build:css && eleventy"
   },
+  "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@tailwindcss/typography": "^0.4.0",
