--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2"
   }
 }
