--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.1",
     "cssnano": "^4.1.10",
+    "markdown-it-container": "^3.0.0",
     "plop": "^2.7.4",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2"
   }
