--- a/package.json
+++ b/package.json
@@ -3,24 +3,29 @@
   "version": "0.0.0-not-distributed",
   "description": "A collection of programming protips",
   "scripts": {
-    "build:css": "postcss src/css/tailwind.css > src/css/styles.css",
-    "dev": "yarn build:css && eleventy --serve",
-    "build": "NODE_ENV=production yarn build:css && eleventy",
+    "build:prod:css": "postcss src/css/tailwind.css --output src/css/styles.css",
+    "build:dev:css": "yarn build:prod:css --watch",
+    "build:prod:eleventy": "eleventy",
+    "build:dev:eleventy": "eleventy --serve",
+    "dev": "concurrently 'npm:build:dev:*'",
+    "build": "yarn build:prod:css && yarn build:prod:eleventy",
     "test": "prettier --check src",
     "prettier": "prettier --write src"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.1",
-    "cssnano": "^4.1.10",
+    "@11ty/eleventy": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.4",
+    "autoprefixer": "^10.4.8",
+    "concurrently": "^7.3.0",
+    "cssnano": "^5.1.13",
     "markdown-it-container": "^3.0.0",
-    "plop": "^2.7.4",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.2",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.2"
-  }
+    "plop": "^3.1.1",
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
+    "postcss-import": "^14.1.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {}
 }
